--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,14 +1,21 @@
 <resources>
-    <string name="app_name">BakingApp</string>
+    <string name="app_name">Baking</string>
+
+    <!-- Labels -->
     <string name="ingredients_label">Ingredients</string>
     <string name="steps_label">Steps</string>
     <string name="recipe_details">Recipe</string>
     <string name="description">Description</string>
     <string name="instructions">Instructions</string>
+    <string name="show_ingredients">Show Ingredients</string>
+    <string name="hide_ingredients">Hide Ingredients</string>
 
-    <!-- TODO: Remove or change this placeholder text -->
-    <string name="hello_blank_fragment">Hello blank fragment</string>
+    <!--Widget -->
     <string name="appwidget_text">Baking App</string>
     <string name="add_widget">Add widget</string>
+
+    <!-- For fail to connect to the internet -->
+    <string name="error_data">Error fetching data</string>
+    <string name="baking_app">Baking App</string>
 
 </resources>
