This final vesion in mvvm

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -20,7 +20,7 @@
     <string name="baking_app">Baking App</string>
     <string name="nutella">If you\'ve never tried Nutella, that ambrosial combination of hazelnuts and chocolate</string>
     <string name="brownies">worlds best fudgiest brownies is my best brownie recipe! perfect crisp crackly top</string>
-    <string name="yellow_cake">A classic homemade Yellow Cake recipe with chocolate frosting and step-by-step photo</string>
+    <string name="yellow_cake">A classic homemade Yellow Cake recipe with chocolate frosting and step-by-step</string>
     <string name="cheescake">Cheesecake should never be a source of anything except pure bliss. Not distress.</string>
     <string name="hot_recipes">Hot Recipes</string>
     <string name="_4_recipes">4 recipes</string>
